--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+.vs/
+TestResults/
+TravelSaga/obj/
+TravelSaga/bin/
+TravelSagaTest/obj/
+TravelSagaTest/bin/
